src/app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #fbf6f2;
  --text-main: #427B78; /* main color for texts */
  --primary-text: #D22727; /* highlighting color for important texts */
  --text-highlight-dark-bg: #F6EEC8; /* text color for darker backgrounds */
  --text-highlight-hover: #f7e279;
  --button-light: #8DB2B0; /* highlighting color for buttons */
  --text-dark: #004643;
  --background-dark-edge: #f7d2bb;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #ffffff;
    --foreground: #ffffff;
  }
}

body {
  background: radial-gradient(circle, var(--background-dark-edge) 0%, var(--background) 50%, var(--background) 100%);
  color: var(--foreground);
  font-family: var(--font-krub), sans-serif;
  margin: 0;
  padding: 0;
  overflow: hidden;
  scrollbar-color: var(--button-light) var(--primary-text);
}

/* GENERAL STYLING */
.highlight {
  background-color: var(--text-highlight-dark-bg); 
  padding: 2px 4px; 
}

.highlight:hover {
  cursor: pointer;
  background-color: var(--text-highlight-hover);
}

.text-primary {
  color: var(--primary-text);
}

/* nav bar styling */

.sidemenu {
  margin-right: 2rem;
  display: flex;
  flex-direction: column;
  align-items: end;
  font-family: var(--font-krub);
  color: var(--text-main);
  color: var(--text-main);
  order: 1;
  font-size: larger;
}

.sidemenu-item {
  padding-bottom: 0.5rem;
}

.sidemenu-item:hover {
  color: var(--primary-text);
}

.sidemenu-item-active {
  color: var(--primary-text);
  text-decoration: underline;
  padding-bottom: 0.5rem;
  /* text-decoration: underline; */
}

/* whole home page styling */

.home {
  min-width: 100vw;
  min-height: 100vh;
  display: grid;
  grid-template-columns: 4fr 1fr;
  /* grid-template-rows: 1fr auto; */
  margin-left: 1rem;
  margin-right: 1rem;
  margin-top: 2rem;
  scrollbar-color: var(--button-light) var(--primary-text);
}

 .home .left-wrapper {
  width: 100%;
  display: grid;
  grid-template-rows: 4fr 1fr;
  scrollbar-color: var(--button-light)  var(--primary-text);
}

.home .right-wrapper {
  display: grid;
  grid-template-rows: 4fr 1fr;
}

.home .main-container {
  height: 100%;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: max-content;
}

/* title styling  */
.title {
  display: flex;
  justify-content: end;
  align-items: center;
  margin-right: 2rem;
  font-family: var(--font-kumar-one);
  color: var(--primary-text);
  font-size: xx-large;
  stroke: var(--text-dark);
  order: 2;
}

.title:hover {
  cursor: pointer;
}

.blurb {
  position: fixed;
  margin-top: 1rem;
  place-items: center;
  background-color: var(--background);
  border: 0.05em solid var(--primary-text);
  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
  display: flex;
  align-items: center;
  justify-content: center;
  width: 10em;
  z-index: 2000;
}

.blurb-text {
  padding: 1rem;
  font-size: medium;
}

.philippines-photos {
  position: fixed;
  margin-top: 1rem;
  left: 11em;
  place-items: center;
  background-color: var(--foreground);
  /* border: 0.05em solid var(--primary-text); */
  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
  /* width: 80vw; */
  /* height: 80vh; */
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  padding: 1em;
  z-index: 2000;
}

.philippines-photos .image {
  width: 300px;
}


/* layout wrappers styling  */

 /* .left-wrapper {
  display: flex;
  flex-direction: column;
  order: 1;
  scrollbar-color: var(--button-light)  var(--primary-text);
  width: 70%;
  min-width: 70%;
  height: 100%;
  min-height: 100%;
}

.right-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: space-between; 
  align-items: end;
  min-width: 30%;
  width: 30%;
  height: 100%;
  min-height: 100%;
  order: 2;
} */

.left-header {
  flex-shrink: 0;
  padding-bottom: 5rem;
  min-height: 20%;
  order: 1;
}

.left-main-text{
  color: var(--text-main);
  font-weight: 500;
  font-style: normal;
  font-size: x-large;
  max-width: 60%;
  order: 2;
  min-height: 80%;
  place-items: center;
  /* color: var(--text-dark); */
}

.left-footer{
  display: flex;
  align-items: end;
  min-height: 20%;
  order: 3;
}

.left-footer-small{
  visibility: hidden;
  padding-top: 3rem;
  min-height: 20%;
  order: 3;
}

.footer {
  display: flex;
  min-width: auto;
  justify-content: start;
  color: var(--text-main);
  align-items: flex-start;
}

.socials-button {
  border: 0.1em solid var(--button-light);
  margin-right: 2rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-bottom: 0.25rem;
  padding-top: 0.25rem;
  color: var(--text-dark);
}

.socials-button:hover {
  border: 0.1em solid var(--button-light);
  background-color: var(--button-light);
  color: var(--text-highlight-dark-bg);
}

/* ABOUT PAGE STYLING */
.about-container {
 width: 80%; 
 border: 0.05em solid var(--primary-text);
 background-color: var(--background);
 display: grid;
 grid-template-rows: 1fr 2fr 4fr;
}

.about-container .section {
  margin: 1rem;
  display: grid;
  grid-template-columns: 2fr 3fr;
  border-bottom: 5px var(--primary-text);
}

.about-container .section .header {
  font-size: large;
  font-weight: 600;
  color: var(--primary-text);
}

.about-container .section .summary {
  color: var(--text-main);
}

.section .education {
  display: grid;
  flex-direction: 1fr 1fr;
  gap: 1rem;
}

.about-container .section .education .education-item .about-name {
  color: var(--text-main);
  /* font-style: italic; */
}

.section .education-item .details {
  color: var(--text-main);
}

.section .education-item .description {
  color: var(--text-main);
}

/* SOFTWARE PROJECTS PAGE STYLING */

.software-projects-list-item {
  /* font-weight: 500; */
  /* font-style: normal; */
  font-size: x-large;
  /* max-width: 60%; */
  /* min-height: 60%;  */
  /* color: var(--text-dark); */
}
/* ... */

